// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div>
  <table
    class="ui selectable very compact table"
  >
    <tbody
      class=""
    >
      <tr
        class="version--item cursor-pointer"
      >
        <td
          class=""
        >
          <p
            title="VersionFileName.js"
          >
            <b>
              VersionFileName.js
            </b>
          </p>
          <p
            data-testid="version-item"
            title="version description"
          >
            <small>
              version description
            </small>
          </p>
        </td>
        <td
          class="collapsing right aligned top aligned"
        >
          <div
            class="ui mini image label"
          >
            <img
              alt="Xu Zhu"
              src="https://lh5.googleusercontent.com/-zxrKRZrDo9w/AAAAAAAAAAI/AAAAAAAAABI/49brkBWBNdQ/photo.jpg"
            />
            Xu Zhu
            <div
              class="detail"
            >
              <time
                datetime="2018-08-21T03:16:11.000Z"
                title="21 Aug 2018"
              >
                8 months ago
              </time>
            </div>
          </div>
          <br />
          <div
            class="ui label ui mini basic icon button smallButton"
            data-testid="copy-version-id"
            role="button"
          >
            <i
              aria-hidden="true"
              class="copy icon"
            />
             FV_TT8NF09R
          </div>
          <div
            class="ui mini basic buttons"
          >
            <button
              class="ui icon button smallButton"
            >
              <i
                aria-hidden="true"
                class="eye icon"
              />
            </button>
            <button
              class="ui icon button smallButton"
            >
              <i
                aria-hidden="true"
                class="download icon"
              />
            </button>
            <button
              class="ui icon button smallButton"
            >
              <i
                aria-hidden="true"
                class="copy icon"
              />
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`renders correctly with 1 as index -- status dot 1`] = `
<div>
  <table
    class="ui selectable very compact table"
  >
    <tbody
      class=""
    >
      <tr
        class="version--item cursor-pointer"
      >
        <td
          class=""
        >
          <p
            title="VersionFileName.js"
          >
            <b>
              VersionFileName.js
            </b>
          </p>
          <p
            data-testid="version-item"
            title="version description"
          >
            <small>
              version description
            </small>
          </p>
        </td>
        <td
          class="collapsing right aligned top aligned"
        >
          <div
            class="ui mini image label"
          >
            <img
              alt="Xu Zhu"
              src="https://lh5.googleusercontent.com/-zxrKRZrDo9w/AAAAAAAAAAI/AAAAAAAAABI/49brkBWBNdQ/photo.jpg"
            />
            Xu Zhu
            <div
              class="detail"
            >
              <time
                datetime="2018-08-21T03:16:11.000Z"
                title="21 Aug 2018"
              >
                8 months ago
              </time>
            </div>
          </div>
          <br />
          <div
            class="ui label ui mini basic icon button smallButton"
            data-testid="copy-version-id"
            role="button"
          >
            <i
              aria-hidden="true"
              class="copy icon"
            />
             FV_TT8NF09R
          </div>
          <div
            class="ui mini basic buttons"
          >
            <button
              class="ui icon button smallButton"
            >
              <i
                aria-hidden="true"
                class="eye icon"
              />
            </button>
            <button
              class="ui icon button smallButton"
            >
              <i
                aria-hidden="true"
                class="download icon"
              />
            </button>
            <button
              class="ui icon button smallButton"
            >
              <i
                aria-hidden="true"
                class="copy icon"
              />
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`renders correctly with not enough data 1`] = `
<div>
  <table
    class="ui selectable very compact table"
  >
    <tbody
      class=""
    >
      <tr
        class="version--item cursor-pointer"
      >
        <td
          class=""
        >
          <p
            title="VersionFileName.js"
          >
            <b>
              VersionFileName.js
            </b>
          </p>
          <p
            data-testid="version-item"
            title=""
          >
            <small>
              
              No version summary available
            </small>
          </p>
        </td>
        <td
          class="collapsing right aligned top aligned"
        >
          <div
            class="ui mini image label"
          >
            <img
              alt="Xu Zhu"
              src="https://lh5.googleusercontent.com/-zxrKRZrDo9w/AAAAAAAAAAI/AAAAAAAAABI/49brkBWBNdQ/photo.jpg"
            />
            Xu Zhu
            <div
              class="detail"
            >
              <time
                datetime="2018-08-21T03:16:11.000Z"
                title="21 Aug 2018"
              >
                8 months ago
              </time>
            </div>
          </div>
          <br />
          <div
            class="ui label ui mini basic icon button smallButton"
            data-testid="copy-version-id"
            role="button"
          >
            <i
              aria-hidden="true"
              class="copy icon"
            />
             FV_TT8NF09R
          </div>
          <div
            class="ui mini basic buttons"
          >
            <button
              class="ui icon button smallButton"
            >
              <i
                aria-hidden="true"
                class="eye icon"
              />
            </button>
            <button
              class="ui icon button smallButton"
            >
              <i
                aria-hidden="true"
                class="download icon"
              />
            </button>
            <button
              class="ui icon button smallButton"
            >
              <i
                aria-hidden="true"
                class="copy icon"
              />
            </button>
          </div>
        </td>
      </tr>
      <tr
        class="version--item cursor-pointer"
      >
        <td
          class=""
        >
          <p
            title="VersionFileName.js"
          >
            <b>
              VersionFileName.js
            </b>
          </p>
          <p
            data-testid="version-item"
            title=""
          >
            <small>
              
              No version summary available
            </small>
          </p>
        </td>
        <td
          class="collapsing right aligned top aligned"
        >
          <div
            class="ui mini image label"
          >
            <img
              alt="Xu Zhu"
              src="https://lh5.googleusercontent.com/-zxrKRZrDo9w/AAAAAAAAAAI/AAAAAAAAABI/49brkBWBNdQ/photo.jpg"
            />
            Xu Zhu
            <div
              class="detail"
            >
              <time
                datetime="2018-08-21T03:16:11.000Z"
                title="21 Aug 2018"
              >
                8 months ago
              </time>
            </div>
          </div>
          <br />
          <div
            class="ui label ui mini basic icon button smallButton"
            data-testid="copy-version-id"
            role="button"
          >
            <i
              aria-hidden="true"
              class="copy icon"
            />
             FV_TT8NF09R
          </div>
          <div
            class="ui mini basic buttons"
          >
            <button
              class="ui icon button smallButton"
            >
              <i
                aria-hidden="true"
                class="eye icon"
              />
            </button>
            <button
              class="ui icon button smallButton"
            >
              <i
                aria-hidden="true"
                class="download icon"
              />
            </button>
            <button
              class="ui icon button smallButton"
            >
              <i
                aria-hidden="true"
                class="copy icon"
              />
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
